# Time-Varying-CDCI

./: README.md
ARGoS_simulation/ARK_LoopFunction/: ark.cpp  ark.h
ARGoS_simulation/ExperimentConfigurationFile/: kilobot_ark_template_scenarioA_withVisualization.argos
KilobotCode/CDCI_HighInteractionRate(r=100)/: CMakeLists.txt  agentCDCIlocal_r100.c
KilobotCode/CDCI_LowInteractionRate(r=1)/: CMakeLists.txt  agentCDCIlocal_r1.c
KilobotCode/CDCI_ValueSensitiveRamp/: agentCDCIlocal_r100.c
KilobotCode/CDCI_ValueSensitiveStep/: agentCDCIlocal_r100.c
KilobotCode/DC/WithResampling/: CMakeLists.txt  agentCDCIlocal.c
KilobotCode/DC/WitoutResampling/: agentCDCIlocal.c
